# metadata-ai

./: .gitignore  Dockerfile  README.md  api_main.py  app.py  config.py  docker-compose.yml  mcp_client.py  mcp_server.py  mcp_stdio_client.py  pyproject.toml
api/: routes.py
core/: agent_actions.py  context_gathering.py  llm_client.py  query_engine.py  query_resolution.py
feedback/: tracking.py
rag/: api.py  consumer.py  consumer_main.py  embedder.py  mongo.py  retriever.py  vector_store.py
utils/: kafka_producer.py
